--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,16 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/prompt": "^4.5.1",
+    "@types/jquery": "^3.5.13",
     "axios": "^0.25.0",
     "framer-motion": "^5",
+    "jquery": "^3.6.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.7"
+    "react-owl-carousel": "^2.3.3",
+    "sass": "^1.49.7",
+    "swiper": "^8.0.5"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
