--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,11 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-icons": "^4.3.1","
+    "react-icons": "^4.3.1",
     "react-owl-carousel": "^2.3.3",
     "sass": "^1.49.7",
-    "swiper": "^8.0.5"
-    "react-dropzone": "^12.0.2",
+    "swiper": "^8.0.5",
+    "react-dropzone": "^12.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.16",
