--- a/backend/package.json
+++ b/backend/package.json
@@ -18,10 +18,11 @@
   },
   "homepage": "https://github.com/Mrsmithz/Project-SW-Dev-and-Env#readme",
   "dependencies": {
+    "@google-cloud/documentai": "^3.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
-    "http": "^0.0.1-security",
-    "morgan": "^1.10.0"
+    "fs": "^0.0.1-security",
+    "http": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -30,6 +31,8 @@
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.17",
     "@types/supertest": "^2.0.11",
+    "dotenv": "^16.0.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.2",
     "ts-jest": "^27.1.3",
