--- a/backend/package.json
+++ b/backend/package.json
@@ -21,12 +21,14 @@
     "@google-cloud/documentai": "^3.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
     "http": "^0.0.1-security"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/formidable": "^2.0.4",
     "@types/jest": "^27.4.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.17",
