[Fix Bug] edit github actions branches name

--- a/.github/workflows/simple-deployment.yml
+++ b/.github/workflows/simple-deployment.yml
@@ -3,7 +3,7 @@ on:
   push:
     branches:
       - dev
-      - development/deployment
+      - develop/deployment
 jobs:
   deploy:
     name: deploy
