--- a/.github/workflows/simple-deployment.yml
+++ b/.github/workflows/simple-deployment.yml
@@ -21,4 +21,4 @@ jobs:
             cd app/Project-SW-Dev-and-Env
             git pull
             cd deployment
-            docker-compose up --build
+            docker-compose up --build -d
