--- a/.github/workflows/simple-deployment.yml
+++ b/.github/workflows/simple-deployment.yml
@@ -21,4 +21,5 @@ jobs:
             cd app/Project-SW-Dev-and-Env
             git pull
             cd deployment
+            docker-compose down
             docker-compose up --build -d
