--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "unit-test": "jest -t 'formValidation'"
+    "unit-test": "jest -i ./src/test/utils/formValidation.test.ts"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
@@ -25,7 +25,8 @@
     "react-icons": "^4.3.1",
     "react-owl-carousel": "^2.3.3",
     "sass": "^1.49.7",
-    "swiper": "^8.0.5"
+    "swiper": "^8.0.5",
+    "ts-jest": "^27.1.3"
   },
   "devDependencies": {
     "@types/jest": "^27.4.1",
