--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "unit-test": "jest -i ./src/test/utils/formValidation.test.ts"
+    "unit-test": "jest -i ./src/test/utils/formValidation.test.ts",
+    "component-test": "jest -i ./src/test/utils/CreatePost.test.tsx"
   },
   "dependencies": {
     "@chakra-ui/icons": "^1.1.5",
@@ -14,9 +15,11 @@
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "@fontsource/prompt": "^4.5.1",
+    "@testing-library/react": "^12.1.3",
     "@types/jquery": "^3.5.13",
     "axios": "^0.25.0",
     "framer-motion": "^5",
+    "identity-obj-proxy": "^3.0.0",
     "jquery": "^3.6.0",
     "next": "12.0.10",
     "react": "17.0.2",
@@ -29,9 +32,12 @@
     "ts-jest": "^27.1.3"
   },
   "devDependencies": {
+    "@babel/core": "^7.17.5",
+    "@testing-library/jest-dom": "^5.16.2",
     "@types/jest": "^27.4.1",
     "@types/node": "17.0.16",
     "@types/react": "17.0.39",
+    "babel-jest": "^27.5.1",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "jest": "^27.5.1",
