--- a/backend/package.json
+++ b/backend/package.json
@@ -22,14 +22,20 @@
     "@google-cloud/documentai": "^3.2.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-graphql": "^0.12.0",
     "formidable": "^2.0.1",
     "fs": "^0.0.1-security",
-    "http": "^0.0.1-security"
+    "graphql-compose": "^9.0.7",
+    "graphql-compose-mongoose": "^9.7.1",
+    "http": "^0.0.1-security",
+    "mongoose": "^6.2.6",
+    "mongoose-timestamp": "^0.6.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/formidable": "^2.0.4",
+    "@types/graphql-upload": "^8.0.11",
     "@types/jest": "^27.4.0",
     "@types/morgan": "^1.9.3",
     "@types/node": "^17.0.17",
