--- a/backend/package.json
+++ b/backend/package.json
@@ -29,7 +29,9 @@
     "graphql-compose-mongoose": "^9.7.1",
     "http": "^0.0.1-security",
     "mongoose": "^6.2.6",
-    "mongoose-timestamp": "^0.6.0"
+    "mongoose-timestamp": "^0.6.0",
+    "multer": "^1.4.4",
+    "multer-gridfs-storage": "^5.0.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
@@ -38,9 +40,11 @@
     "@types/graphql-upload": "^8.0.11",
     "@types/jest": "^27.4.0",
     "@types/morgan": "^1.9.3",
+    "@types/multer": "^1.4.7",
     "@types/node": "^17.0.17",
     "@types/supertest": "^2.0.11",
     "dotenv": "^16.0.0",
+    "mongodb-memory-server": "^8.4.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.2",
