--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "nodemon index.ts",
     "serve": "ts-node index.ts",
-    "test": "jest --coverage"
+    "test": "jest --coverage --detectOpenHandles"
   },
   "repository": {
     "type": "git",
@@ -28,6 +28,7 @@
     "graphql-compose": "^9.0.7",
     "graphql-compose-mongoose": "^9.7.1",
     "http": "^0.0.1-security",
+    "joi": "^17.6.0",
     "mongoose": "^6.2.6",
     "mongoose-timestamp": "^0.6.0",
     "multer": "^1.4.4",
