[Fix Bug] fix env variables did not pass throught containers

--- a/deployment/docker-compose.yaml
+++ b/deployment/docker-compose.yaml
@@ -18,4 +18,4 @@ services:
     ports:
       - 8000:8000
     environment:
-      - MONGODB_URI:"${MONGODB_URI}"
+      - MONGODB_URI=${MONGODB_URI}
