--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "graphql-compose": "^9.0.7",
     "graphql-compose-mongoose": "^9.7.1",
     "http": "^0.0.1-security",
+    "jest": "^27.5.1",
     "joi": "^17.6.0",
     "mongoose": "^6.2.6",
     "mongoose-timestamp": "^0.6.0",
