--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:16.14-alpine
+FROM node:16.14
 
 WORKDIR /usr/app
 
@@ -7,6 +7,8 @@ COPY package*.json ./
 RUN npm install
 
 COPY ./ ./
+
+RUN npm run test
 
 EXPOSE 8000
 
