[Update] add unit test feedback post

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "unit-test": "jest -i ./src/test/utils/formValidation.test.ts",
+    "unit-test": "jest -i ./src/test/utils/formValidation.test.ts ./src/test/utils/feedbackPost.test.ts",
     "unit-test-coverage": "jest -i ./src/test/utils/formValidation.test.ts --coverage",
     "e2e-test": "jest -i ./src/test/utils/e2e.test.ts",
     "component-test": "jest -i ./src/test/utils/CreatePost.test.tsx",
