[Update] add test cred and test .env file back for easier in development

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "A backend for Docker application",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon index.ts",
-    "serve": "ts-node index.ts",
+    "dev": "NODE_ENV=dev nodemon index.ts",
+    "build": "NODE_ENV=prd ts-node index.ts",
     "test": "jest --coverage --detectOpenHandles"
   },
   "repository": {
